...
- (void (^)(BTPaymentMethod *paymentMethod))completionBlock {
    static id block;
    static dispatch_once_t onceToken;
    dispatch_once(&onceToken, ^{
        block = ^(id paymentMethod){
            self.latestPaymentMethodOrNonce = paymentMethod;
            [self updateStatus:[NSString stringWithFormat:@"Got a nonce. Tap to make a transaction."]];
        };
    });
    return block;
}

- (void)failWithError:(NSError *)error {
...
