...
        
        do {
            let result = try await localPaymentClient.start(request)
            onComplete(BTPaymentMethodNonce(nonce: result.nonce))
        } catch {
            if error as? BTLocalPaymentError == .canceled("") {
                onProgress("Canceled 🎲")
            } else {
                onProgress("Error: \(error.localizedDescription)")
            }
        }
    }
}
...
