...
                                            <action selector="didTapError:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eng-kb-nWu"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cN2-3k-8pQ">
                                        <rect key="frame" x="0.0" y="187.5" width="307" height="32"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="Cancel"/>
                                        <connections>
                                            <action selector="didTapCancel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fVh-8m-2rT"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
