...
            self.threeDSecureClient.start(threeDSecureRequest) { threeDSecureResult, error in
                self.callbackCount += 1
                self.updateCallbackCount()

                guard let threeDSecureResult else {
                    if error as? BTThreeDSecureError == .canceled {
                        self.progressBlock("Canceled 🎲")
                    } else {
                        self.progressBlock(error?.localizedDescription)
                    }
                    return
                }

...
    }

    private func createUICustomization() -> BTThreeDSecureV2UICustomization {
        let toolbarCustomization = BTThreeDSecureV2ToolbarCustomization()
        toolbarCustomization.headerText = "Braintree 3DS Checkout"
        toolbarCustomization.backgroundColor = "#FF5A5F"
        toolbarCustomization.buttonText = "Close"
        toolbarCustomization.textColor = "#222222"
        toolbarCustomization.textFontSize = 18
        toolbarCustomization.textFontName = "AmericanTypewriter"

        let buttonCustomization = BTThreeDSecureV2ButtonCustomization()
        buttonCustomization.backgroundColor = "#FFC0CB"
...
