...
- (void)tappedChangePaymentMethod {
    UIViewController *rootViewController;
    if (self.paymentMethods.count == 1) {
        rootViewController = [self addPaymentMethodDropInViewController];
    } else {
        BTDropInSelectPaymentMethodViewController *selectPaymentMethod = [[BTDropInSelectPaymentMethodViewController alloc] init];
        selectPaymentMethod.title = @"Payment Method";
        selectPaymentMethod.theme = self.theme;
        selectPaymentMethod.paymentMethods = self.paymentMethods;
        selectPaymentMethod.selectedPaymentMethodIndex = self.selectedPaymentMethodIndex;
        selectPaymentMethod.delegate = self;
        selectPaymentMethod.client = self.client;
        rootViewController = selectPaymentMethod;
...
